--- a/main.html
+++ b/main.html
@@ -1,16 +1,112 @@
-<!DOCTYPE html>
-
-<html>
-
+<!doctype html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Trivia Question</title>
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      line-height: 1.5;
+      padding: 24px;
+      background: #ffffff;
+      color: #222;
+    }
+
+    .quiz {
+      max-width: 760px;
+      margin: 0 auto;
+    }
+
+    /* Question heading */
+    .question-title {
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+
+    fieldset {
+      border: none;
+      padding: 0;
+      margin: 0 0 18px 0;
+    }
+
+    .options {
+      margin-left: 8px;
+      margin-bottom: 16px;
+    }
+
+    /* Make each radio option easier to click */
+    .option {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin: 6px 0;
+    }
+
+    /* The styled quotation (requirements) */
+    .quote {
+      max-width: 600px;         /* around 600px */
+      margin: 10px 0;           /* approx 10px */
+      padding: 15px;            /* around 15px */
+      border-left: 8px solid #008000; /* green left border */
+      background-color: #f8fffe; /* close to #f8fffe */
+      font-weight: 700;         /* bold */
+    }
+
+    .quote cite {
+      display: block;
+      margin-top: 8px;
+      font-style: normal;
+      font-weight: 400;
+    }
+
+    /* small submit button styling like in image */
+    .submit-btn {
+      background: #f36f51;
+      color: white;
+      border: none;
+      padding: 10px 14px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: 600;
+    }
+
+    /* Accessibility focus styles */
+    input[type="radio"]:focus + label {
+      outline: 2px dashed #66b2ff;
+      outline-offset: 3px;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <main class="quiz">
+    <form action="#" method="post" aria-label="Trivia question form">
+      <fieldset>
+        <legend class="question-title">What is the capital of India?</legend>
 
+        <div class="options" role="radiogroup" aria-labelledby="question1">
+          <div class="option">
+            <input type="radio" id="opt-newdelhi" name="capital" value="New Delhi">
+            <label for="opt-newdelhi">New Delhi</label>
+          </div>
+
+          <div class="option">
+            <input type="radio" id="opt-mumbai" name="capital" value="Mumbai">
+            <label for="opt-mumbai">Mumbai</label>
+          </div>
+        </div>
+      </fieldset>
+
+      <!-- The required styled quotation -->
+      <blockquote class="quote">
+        New Delhi is the capital of India and an administrative district of NCT Delhi.
+        <cite>
+          Reference: <a href="https://en.wikipedia.org/wiki/New_Delhi" target="_blank" rel="noopener">Wikipedia</a>
+        </cite>
+      </blockquote>
+
+      <button type="submit" class="submit-btn">Submit</button>
+    </form>
+  </main>
 </body>
-
 </html>
