--- a/main.html
+++ b/main.html
@@ -98,7 +98,7 @@
       </fieldset>
 
       <!-- The required styled quotation -->
-      <blockquote class="quote" cite=https://en.wikipedia.org/wiki/New_Delhi">
+      <blockquote class="quote" cite="https://en.wikipedia.org/wiki/New_Delhi">
         New Delhi is the capital of India and an administrative district of NCT Delhi.
         <cite>
           Reference: <a href="https://en.wikipedia.org/wiki/New_Delhi" target="_blank" rel="noopener">Wikipedia</a>
